--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,9 @@
 {
-  "semi": false,
-  "singleQuote": true
+	"useTabs": true,
+	"tabWidth": 2,
+	"semi": true,
+	"singleQuote": true,
+	"endOfLine": "auto",
+	"printWidth": 120,
+	"trailingComma": "none"
 }
