--- a/package.json
+++ b/package.json
@@ -21,10 +21,15 @@
     }
   },
   "dependencies": {
+    "@nuxtjs/style-resources": "^1.2.0",
     "core-js": "^3.9.1",
-    "nuxt": "^2.15.3"
+    "eslint-plugin-prettier-vue": "^3.1.0",
+    "nuxt": "^2.15.3",
+    "pug": "^3.0.2",
+    "pug-plain-loader": "^1.1.0"
   },
   "devDependencies": {
+    "@nuxt/types": "^2.15.7",
     "@nuxtjs/eslint-config": "^6.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/stylelint-module": "^4.0.0",
@@ -34,9 +39,12 @@
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.7.0",
+    "fibers": "^5.0.0",
     "husky": "^4.3.8",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
+    "sass": "^1.35.1",
+    "sass-loader": "^10.2.0",
     "stylelint": "^13.12.0",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^21.0.0"
